Fix rsvp spacing

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,3 @@ h2 {
     text-decoration: none;
     color: #93b499;
 }
-
-iframe {
-    margin-top: -60px;
-}
